k8s/ghproxy-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghproxy
  namespace: foundation-internal-security-otterdog
  labels:
    app: ghproxy
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghproxy
      environment: production
  template:
    metadata:
      labels:
        app: ghproxy
        environment: production
    spec:
      containers:
      - image: us-docker.pkg.dev/k8s-infra-prow/images/ghproxy:v20240923-efb534162
        name: ghproxy
        args:
        - --redis-address=redis:6379
        - --legacy-disable-disk-cache-partitions-by-auth-header=false
        - --throttling-time-ms=10
        - --get-throttling-time-ms=10
        - --log-level=error
        ports:
          - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: ghproxy
  namespace: foundation-internal-security-otterdog
  labels:
    app: ghproxy
    environment: production
spec:
  ports:
  - port: 8888
    protocol: TCP
  selector:
    app: ghproxy
    environment: production
