k8s/ghproxy-staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghproxy-staging
  namespace: foundation-internal-security-otterdog
  labels:
    app: ghproxy
    environment: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghproxy
      environment: staging
  template:
    metadata:
      labels:
        app: ghproxy
        environment: staging
    spec:
      containers:
      - image: us-docker.pkg.dev/k8s-infra-prow/images/ghproxy:v20240923-efb534162
        name: ghproxy-staging
        args:
        - --redis-address=redis-staging:6379
        - --legacy-disable-disk-cache-partitions-by-auth-header=false
        - --throttling-time-ms=10
        - --get-throttling-time-ms=10
        - --log-level=error
        ports:
          - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: ghproxy-staging
  namespace: foundation-internal-security-otterdog
  labels:
    app: ghproxy
    environment: staging
spec:
  ports:
  - port: 8888
    protocol: TCP
  selector:
    app: ghproxy
    environment: staging
