k8s/mongodb-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: foundation-internal-security-otterdog
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mongodb
  template:
    metadata:
      labels:
        run: mongodb
    spec:
      containers:
      - image: mongo:7.0.5
        name: mongodb
        args: ["--quiet", "--logpath", "/dev/null", "--dbpath", "/data/db"]
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: "pvol"
            mountPath: "/data/db"
      volumes:
        - name: "pvol"
          persistentVolumeClaim:
            claimName: "otterdog-pvc"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: foundation-internal-security-otterdog
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    run: mongodb
