k8s/mongodb-staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-staging
  namespace: foundation-internal-security-otterdog
  labels:
    app: mongodb
    environment: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      environment: staging
  template:
    metadata:
      labels:
        app: mongodb
        environment: staging
    spec:
      containers:
      - image: mongo:7.0.5
        name: mongodb
        args: ["--dbpath", "/data/db"]
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: "pvol"
            mountPath: "/data/db"
          - name: mongodb-configuration-file
            mountPath: "/etc/mongod.conf"
            subPath: "mongod.conf"
            readOnly: true
      volumes:
        - name: "pvol"
          persistentVolumeClaim:
            claimName: "mongodb-staging-pvc"
        - name: mongodb-configuration-file
          configMap:
            name: mongodb-staging-config
            items:
              - key: "conf"
                path: "mongod.conf"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-staging
  namespace: foundation-internal-security-otterdog
  labels:
    app: mongodb
    environment: staging
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    app: mongodb
    environment: staging
