k8s/redis-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: foundation-internal-security-otterdog
  labels:
    app: redis
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      environment: production
  template:
    metadata:
      labels:
        app: redis
        environment: production
    spec:
      containers:
      - image: redis:7.2.4-alpine
        name: redis
        args: ["--save", "20 1", "--loglevel", "warning"]
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: "pvol"
            mountPath: "/data"
      volumes:
        - name: "pvol"
          persistentVolumeClaim:
            claimName: "redis-pvc"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: foundation-internal-security-otterdog
  labels:
    app: redis
    environment: production
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
    environment: production
