k8s/redis-productions.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: foundation-internal-security-otterdog
spec:
  replicas: 1
  selector:
    matchLabels:
      run: redis
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
      - image: redis:7.2.4-alpine
        name: redis
        args: ["--loglevel", "warning"]
        ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: foundation-internal-security-otterdog
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    run: redis
